--- a/Win10 project/App.xaml
+++ b/Win10 project/App.xaml
@@ -3,6 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Win10_project"
-    RequestedTheme="Light">
+    RequestedTheme="Dark">
 
 </Application>
