--- a/Win10 project/View/MainPage.xaml
+++ b/Win10 project/View/MainPage.xaml
@@ -13,17 +13,18 @@
         <ViewModel:ViewModel/>
     </Page.DataContext>
 
-    <Grid Background="White">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListView x:Name="listView" HorizontalAlignment="Left" Height="700" VerticalAlignment="Top" Width="792" Foreground="Black" Margin="10,10,0,0" ItemsSource="{Binding SingletonViewModel.Instance.Guests}"/>
-        <Button x:Name="SyncButton" Content="Sync With Database" Margin="807,678,0,10" Click="SyncButton_Click">
+        <Button x:Name="AddButton" Content="Add Guest" Margin="807,641,0,47" Width="152">
             <Interactivity:Interaction.Behaviors>
                 <Core:EventTriggerBehavior EventName="Click">
-                    <Core:CallMethodAction MethodName="GetAllGuests" TargetObject="{Binding Mode=OneWay}"/>
+                    <Core:CallMethodAction MethodName="AddGuest" TargetObject="{Binding Mode=OneWay}"/>
                 </Core:EventTriggerBehavior>
             </Interactivity:Interaction.Behaviors>
         </Button>
-        <Button x:Name="AddButton" Content="Add Guest" Margin="807,641,0,47" Width="152"/>
         <Button x:Name="DeleteButton" Content="Delete Guest" Margin="807,604,0,84" Width="152"/>
-
+        <TextBox x:Name="Name" HorizontalAlignment="Right" Margin="0,184,327,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top"/>
+        <TextBox x:Name="Address" HorizontalAlignment="Right" Margin="0,277,204,0" TextWrapping="Wrap" Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top"/>
+        <TextBox x:Name="GuestNo" HorizontalAlignment="Right" Margin="0,0,228,280" TextWrapping="Wrap" Text="{Binding Guest_no, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Bottom"/>
     </Grid>
 </Page>
