--- a/Win10 project/View/MainPage.xaml
+++ b/Win10 project/View/MainPage.xaml
@@ -14,17 +14,30 @@
     </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="700" VerticalAlignment="Top" Width="792" Foreground="Black" Margin="10,10,0,0" ItemsSource="{Binding SingletonViewModel.Instance.Guests}"/>
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="700" VerticalAlignment="Top" Width="792" Foreground="Black" Margin="10,10,0,0" ItemsSource="{Binding SingletonViewModel.Instance.Guests}" SelectedItem="{Binding SelectedGuest, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Button x:Name="AddButton" Content="Add Guest" Margin="807,641,0,47" Width="152">
             <Interactivity:Interaction.Behaviors>
                 <Core:EventTriggerBehavior EventName="Click">
-                    <Core:CallMethodAction MethodName="AddGuest" TargetObject="{Binding Mode=OneWay}"/>
+                    <Core:InvokeCommandAction Command="{Binding AddGuestCommand}"/>
                 </Core:EventTriggerBehavior>
             </Interactivity:Interaction.Behaviors>
         </Button>
-        <Button x:Name="DeleteButton" Content="Delete Guest" Margin="807,604,0,84" Width="152"/>
+        <Button x:Name="DeleteButton" Content="Delete Guest" Margin="807,604,0,84" Width="152">
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:InvokeCommandAction Command="{Binding DeleteGuestCommand}"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </Button>
         <TextBox x:Name="Name" HorizontalAlignment="Right" Margin="0,184,327,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top"/>
         <TextBox x:Name="Address" HorizontalAlignment="Right" Margin="0,277,204,0" TextWrapping="Wrap" Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top"/>
         <TextBox x:Name="GuestNo" HorizontalAlignment="Right" Margin="0,0,228,280" TextWrapping="Wrap" Text="{Binding Guest_no, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Bottom"/>
+        <Button x:Name="button" Content="Update Guest" HorizontalAlignment="Left" Margin="807,508,0,0" VerticalAlignment="Top" Height="60" Width="152" Click="button_Click">
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:InvokeCommandAction Command="{Binding UpdateGuestCommand}"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </Button>
     </Grid>
 </Page>
